2001-12-09  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-file-operations.c:
	(handle_transfer_ok): Do fix based on patch from Martin Wehner
	<mwehner@tfh-berlin.de> to prevent cancel of emptying trash or
	deleting from core dumping.
	
	* Makefile.am:
	* configure.in:
	* docs/.cvsignore:
	* docs/Makefile.am:
	Add files in the docs directory to tarball.
	
	* libnautilus/nautilus-view-standard-main.c:
	(nautilus_view_standard_main_multi): Whitespace tweak.

2001-12-08  Anders Carlsson  <andersca@gnu.org>

	* components/throbber/nautilus-throbber.c:
	(nautilus_throbber_instance_init):
	* src/nautilus-window.c: (nautilus_window_allow_stop):
	Update for new bonobo property bag API.
	
2001-12-08  Michael Meeks  <michael@ximian.com>

	* components/tree/nautilus-tree-view.c
	(nautilus_tree_view_init): unroll control creation,
	connect to "activate" signal handler not map / unmap
	on no-window widget GtkScrolledWindow.
	(tree_map_callback, tree_unmap_callback): kill.
	(tree_activate_callback): impl.

	* components/tree/libmain.c
	(BonoboActivation_Plugin_info) ->
	(Bonobo_Plugin_info).

	* components/tree/Makefile.am: setup ldflags
	correctly, and a LIBADD so we can activate it
	independantly.

	* components/throbber/main.c (main): fix for
	bonobo-activation-server race condition.

	* libnautilus-private/nautilus-marshal.list:
	add VOID:STRING,STRING

2001-12-06  Michael Meeks  <michael@ximian.com>

	* libnautilus/nautilus-view-standard-main.c
	(nautilus_view_standard_main_multi): if we were
	already registered - due to a beautifuly inefficient
	activation server race - just quit.

2001-12-07  Darin Adler  <darin@bentspoon.com>

	* docs/design.txt:
	* docs/gnomad-notes.txt:
	* docs/metaitems.txt:
	* docs/nautilus.faq:
	* docs/use-cases.txt:
	Tweak some documents, removing obsolete ones.

2001-12-06  Darin Adler  <darin@bentspoon.com>

	* components/Makefile.am:
	* components/mozilla/.cvsignore:
	* components/mozilla/Makefile.am: